--- a/Python/基礎.md
+++ b/Python/基礎.md
@@ -8,3 +8,23 @@
 この行はコメントアウトされます
 処理が実行されません
 """
+
+
+# 改行
+## Pythonのprint関数は標準で改行コードを末尾に追加して文字列を出力する
+
+print("Hello")
+
+print(123)
+
+Hello
+
+123
+
+## カッコの中に「, end=""」を追加することで、改行をなくすことができる
+
+print("Hello", end="")
+
+print(123)
+
+Hello123
