--- a/Ruby/変数とスコープ.md
+++ b/Ruby/変数とスコープ.md
@@ -9,7 +9,9 @@
 定義されたメソッド内でのみ使用可能
 
 2. インスタンス変数
-インスタンス変数は、クラス内の異なるメソッド間でも値を受け渡せる
+
+インスタンス変数は、クラス内の異なるメソッド間でも値を受け渡せる。クラスメソッドは不可
 
 3. クラス変数
 
+クラス内ならどこでも参照・定義・更新できる
