--- a/Python/基礎.md
+++ b/Python/基礎.md
@@ -35,3 +35,19 @@ Hello123
 player = "勇者"
 
 print(player + "は、迷子になっている")
+
+## str関数
+数値を、数を表す文字に変換する
+
+str(number) 
+
+## random関数
+0から1までの間で、ランダムな数値を返す
+
+random.random() ：0から1までのランダムな数値を出力する
+
+
+## randint関数
+指定した引数の範囲で、ランダムな整数の値を返す
+
+random.randint(a, b) ：aからbまでの間のランダムな整数を出力する
