--- a/基本情報技術者試験.md
+++ b/基本情報技術者試験.md
@@ -3,8 +3,32 @@
 ビット　・・・　１か０が入る一つの箱
 
 バイト　・・・　８個ビットが集まると、１バイトになる
-
+```
+8bit = 1byte
+```
 ## 2進数
+10進数 = 箱の大きさが9 = 使う数字が１０個
+
+n進数 = 箱の大きさがn-1 = 使う数字がn個
+
+2進数の場合、桁が繰り上がるたびに、箱の大きさが２倍の数になっていく。
+
+```
+123（１０進数） → 1111011（２進数）
+```
+123（１０進数）を２進数に変換する場合
+```
+123 / 2 = 61 あまり 1
+61 / 2 = 30 あまり 1
+30 / 2 = 15 あまり 0
+15 / 2 = 7 あまり 1
+7 / 2 = 3 あまり 1
+3 / 2 = 1 あまり 1
+で、最後の商の1から、あまりを遡ったものが答えとなる
+#=> 1111011
+```
+
+
 
 
 # ハードウェア
