--- a/基本情報技術者試験.md
+++ b/基本情報技術者試験.md
@@ -36,6 +36,33 @@ n進数 = 箱の大きさがn-1 = 使う数字がn個
 #=> 11
 ```
 
+## 論理演算
+```
+２進数の足し算に必要な最も基本の演算
+0 + 0 = 0
+0 + 1 = 1
+1 + 0 = 1
+1 + 1 = 10
+
+論理演算（0と1の組み合わせで計算をすること）
+
+・AND（論理積）
+　どちらも１のとき、１を出力する
+・OR（論理和）
+ どちらかが１のとき、１を出力する
+・NOT（否定）
+ ０と１を反転する
+ 
+この３つの基本回路があれば、出力と入力の組み合わせを自在に作り出すことができる
+
+・NAND（否定論理積）
+ どちらも１のとき、０を出力する
+・NOR(否定論理和) 
+ どちらかが１のとき、０を出力する
+・XOR（排他的論理和）
+ どちらかが１のとき、１を出力する
+ 
+```
 
 # ハードウェア
 
