--- a/基本情報技術者試験.md
+++ b/基本情報技術者試験.md
@@ -60,8 +60,15 @@ n進数 = 箱の大きさがn-1 = 使う数字がn個
 ・NOR(否定論理和) 
  どちらかが１のとき、０を出力する
 ・XOR（排他的論理和）
- どちらかが１のとき、１を出力する
- 
+ どちらかが１のときのみ、１を出力する
+
+真理値表（XOR）
+A B 出力
+0 0 0
+0 1 1
+1 0 1
+1 1 0
+#=> XORの出力結果と、2進数の最も基本の演算の結果が一致する
 ```
 
 # ハードウェア
