--- a/基本情報技術者試験.md
+++ b/基本情報技術者試験.md
@@ -71,6 +71,43 @@ A B 出力
 #=> XORの出力結果と、2進数の最も基本の演算の結果が一致する
 ```
 
+## 2進数の計算
+```
+足し算
+    1111011
+  + 1111111
+#=>11111010 = 250（10進数）
+
+引き算
+コンピュータは足し算しかできないので、引き算を足し算で表す
+うまくいくように負の数を表す = 補数表現
+
+例）10進数の補数で引き算してみると
+127 - 123 = 4
+↓
+127 + 877（123の10の補数） = 1004（004）
+n進数の引き算は、nの補数を使えば、足し算で表せる
+※nの補数とは、桁が繰り上がりするのに、必要な数のこと。
+
+【2進数の場合】
+1111011
+繰り上がりしない最大値は、100
+つまり、101を足せば、繰り上がる。 101 = 1111011の2の補数
+
+1111111 - 1111011 = 100
+↓
+1111111 + 101 = 10000100(0000100)
+※2進数の引き算は、2の補数を足す！
+
+2の補数の作り方
+111001
+↓　すべてのビットを反転させる
+000110（1の補数）
+↓　1を足す
+000111（2の補数）
+
+```
+
 # ハードウェア
 
 
