--- a/基本情報技術者試験.md
+++ b/基本情報技術者試験.md
@@ -73,12 +73,12 @@ A B 出力
 
 ## 2進数の計算
 ```
-足し算
+・足し算
     1111011
   + 1111111
 #=>11111010 = 250（10進数）
 
-引き算
+・引き算
 コンピュータは足し算しかできないので、引き算を足し算で表す
 うまくいくように負の数を表す = 補数表現
 
@@ -106,6 +106,19 @@ n進数の引き算は、nの補数を使えば、足し算で表せる
 ↓　1を足す
 000111（2の補数）
 
+・シフト演算（掛け算/割り算）
+掛け算（論理シフト）
+   00001101    （13）
+ ↓ 2n倍したい     ↓ 2×2 = 4倍  
+ 0000110100    （52）
+#=> ｎだけ左にずらす
+
+割り算（論理シフト）
+   00001101    （13）
+ ↓ 1/2n倍したい   ↓ 1/2×2 = 1/4倍
+   0000001101  （3） 
+#=> nだけ右にずらす
+右端にはみ出た01が余りとなる。
 ```
 
 # ハードウェア
