--- a/基本情報技術者試験.md
+++ b/基本情報技術者試験.md
@@ -109,13 +109,16 @@ n進数の引き算は、nの補数を使えば、足し算で表せる
 ・シフト演算（掛け算/割り算）
 掛け算（論理シフト）
    00001101    （13）
- ↓ 2n倍したい     ↓ 2×2 = 4倍  
+ ↓ 2n乗したい     ↓ 2×2 = 4倍  
  0000110100    （52）
 #=> ｎだけ左にずらす
+※はみ出た分が、オーバーフローとなることもある。
+→1000110100
+この場合は、左端の10
 
 割り算（論理シフト）
    00001101    （13）
- ↓ 1/2n倍したい   ↓ 1/2×2 = 1/4倍
+ ↓ 1/2n乗したい   ↓ 1/2×2 = 1/4倍
    0000001101  （3） 
 #=> nだけ右にずらす
 右端にはみ出た01が余りとなる。
