--- a/基本情報技術者試験.md
+++ b/基本情報技術者試験.md
@@ -123,6 +123,18 @@ n進数の引き算は、nの補数を使えば、足し算で表せる
 #=> nだけ右にずらす
 右端にはみ出た01が余りとなる。
 ```
+## 情報理論
+```
+情報を速く正確に送るには
+符号化・・・情報を速く送るために、その情報を01でバイナリ化すること。
+圧縮・・・速く送るために情報を小さくすること。連続するデータをまとめる。
+可逆圧縮・・・完全にもとに戻せること
+不可逆圧縮・・・元に戻しても不完全となること
+誤り制御・・・情報を送るときノイズで、0は1に、1は0になることがある。それを制御したい。
+パリティチェック・・・データの誤りを検出する仕組み。
+ハフマン符号化・・・平均符号長が短くなるように符号を割り当てること。出現頻度が多い文字に一番短い符号を割り当てる。
+```
+
 
 # ハードウェア
 
