--- a/基本情報技術者試験.md
+++ b/基本情報技術者試験.md
@@ -135,6 +135,12 @@ n進数の引き算は、nの補数を使えば、足し算で表せる
 ハフマン符号化・・・平均符号長が短くなるように符号を割り当てること。出現頻度が多い文字に一番短い符号を割り当てる。
 ```
 
+## 課題：論理回路応用
+```
+回路記号と真理値表を見比べる。
+それぞれの選択肢ごとに、出力値を確かめて、絞り込んでいく。
+※なるべく少ない回数で答えを絞り込むには、同じ入力で出力が異なるものを選ぶ。今回は and と or。
+```
 
 # ハードウェア
 
