--- a/基本情報技術者試験.md
+++ b/基本情報技術者試験.md
@@ -143,6 +143,30 @@ n進数の引き算は、nの補数を使えば、足し算で表せる
 ```
 
 # ハードウェア
+## コンピュータとその周りの道具
+```
+ノイマン型コンピュータ・・・現代コンピュータの基本的アーキテクチャ。逐次実行方式（SISD）。プログラム内蔵（記憶）方式。
+逐次実行方式・・・命令を前から順番に一個ずつ行う。
+非ノイマン型・・・量子コンピュータ。GPU。並列処理（SIMDなど）。
+並列処理・・・いろいろなデータに対して、複数並べて、同時系列的に処理を行う。
+```
+
+```
+ノイマン型コンピュータの５大装置
+入力装置・・・マウス、キーボードなど
+出力装置・・・モニター、ディスプレイ、プリンターなど
+記憶装置・・・データを保存しておく部分。長期記憶は、補助記憶装置（HDD。容量が大きいが遅い）。短期記憶は、主記憶装置（メモリ。容量が小さいが早い）。
+演算装置/制御装置・・・２つをまとめて、中央処理装置 = CPU と呼ぶ。
+```
+
+```
+ディスプレイについて
+有機ELディスプレイ・・・有機化合物に電圧を加えて発光。バックライト不要で低消費電力。
+液晶ディスプレイ・・・液晶に電圧を加えて発光。バックライトが必要。
+プラズマディスプレイ・・・プラズマ放電を利用する。高電圧が必要。
+```
+
+
 
 
 # ソフトウェア
