--- a/基本情報技術者試験.md
+++ b/基本情報技術者試験.md
@@ -166,8 +166,45 @@ n進数の引き算は、nの補数を使えば、足し算で表せる
 プラズマディスプレイ・・・プラズマ放電を利用する。高電圧が必要。
 ```
 
+```
+ユーザーインターフェイス（出力装置の見せ方）
+CUI（Character User Interface）・・・文字での出力のみ。コマンドで操作する。
+GUI（Graphical User Interface）・・・マウスを使って、ボタンを押すことで、操作できる。
+```
 
+```
+プリンタ
+ドットインパクトプリンタ・・・インクリボンにヘッドを打ち付けることで印字する。主に転写式の伝票などに使用される。
+インクジェットプリンタ・・・最も一般的なプリンタ。ヘッドからインクを吹き付けて印刷する。
+レーザプリンタ・・・レーザ光線を使ってドラムにインクを付着させ、それを紙に転写することで印刷する。
 
+プリンタ性能指標
+Dpi（Dot Per Inch）・・・１インチにいくつの点（ドット）が印刷されるか。
+CPS・・・（Character Per Second）・・・ドットインパクトプリンタで用いる速度指標。
+PPM（Page Per Minute）・・・レーザプリンタの速度指標。
+```
+
+```
+並列処理
+※Instructionは、命令。
+SISD（Single Instruction stream Single Data stream）
+→　一つのデータを、一つずつ処理を行っていく。
+
+SIMD（Single Instruction stream Multi Data stream）
+→　複数のデータに、同じような一つの処理を行っていく。
+
+MISD(Multi Instruction Single Data stream)
+→　一つのデータに、複数の処理を行っていく。
+
+MIMD(Multi Instruction Multi Data stream)
+→　複数のデータに、複数の処理を行っていく。
+```
+
+```
+周辺機器に関する規格
+プラグアンドプレイ・・・周辺機器を接続したとき、ドライバが自動的にインストールされるような仕組みのこと。
+BLE（Bluetooth Low Energy）・・・低電力で動作するBluetooth規格のこと。Iot機器などで活用。
+```
 
 # ソフトウェア
 
