--- a/基本情報技術者試験.md
+++ b/基本情報技術者試験.md
@@ -206,6 +206,28 @@ MIMD(Multi Instruction Multi Data stream)
 BLE（Bluetooth Low Energy）・・・低電力で動作するBluetooth規格のこと。Iot機器などで活用。
 ```
 
+## CPU
+```
+CPU = 演算装置、制御装置のこと。
+
+何をしているのか？
+    フェッチ  >  解読（デコード）  >  オペランド読み出し  >  命令実行
+命令を取り出す　　　　　　　　命令を解読する　　　　　　　　　データを呼び出す　　　　　　　　　　　実行し結果を格納
+
+CPUの仕組み
+記憶装置からプログラムカウンタに命令を取り出し、命令レジスタに読み込まれる。
+そして、データ呼び出しの際に、汎用レジスタを使用。
+命令を実行し、結果を持ってくる。
+
+レジスタ・・・超高速で超小容量の保存領域のこと。
+```
+
+```
+アドレス指定方式
+
+命令は、命令部とオペランド部に分けられる。
+```
+
 # ソフトウェア
 
 # データベース
