--- a/基本情報技術者試験.md
+++ b/基本情報技術者試験.md
@@ -223,9 +223,20 @@ CPUの仕組み
 ```
 
 ```
-アドレス指定方式
-
+【アドレス指定方式】
 命令は、命令部とオペランド部に分けられる。
+
+・即値アドレス指定方式
+一番簡単だが、データを変えられない。不便。
+
+・直接アドレス指定方式
+置くデータを変えることで、複数の値を扱える。
+
+・関節アドレス指定方式
+データを置く位置に、アドレスを置くことで、より自由に。
+
+・インデックスアドレス指定方式
+
 ```
 
 # ソフトウェア
