--- a/基本情報技術者試験.md
+++ b/基本情報技術者試験.md
@@ -227,15 +227,38 @@ CPUの仕組み
 命令は、命令部とオペランド部に分けられる。
 
 ・即値アドレス指定方式
-一番簡単だが、データを変えられない。不便。
+アドレスの部にデータそのものを格納している。一番簡単だが、データを変えられない。不便。
 
 ・直接アドレス指定方式
-置くデータを変えることで、複数の値を扱える。
+アドレス部の値を、実効アドレスとする。アドレスに置くデータを変えることで、複数の値を扱える。
 
 ・関節アドレス指定方式
-データを置く位置に、アドレスを置くことで、より自由に。
+アドレス部の値が示すアドレスに格納されている別のアドレスを、実効アドレスとする。アドレスにデータを置く位置に、アドレスを置くことで、より自由に。
 
-・インデックスアドレス指定方式
+・インデックスアドレス指定方式（指標アドレス指定方式）
+アドレス部の値と指標レジスタの値の和を、実効アドレスとする。
+
+・ベースアドレス指定方式（基底アドレス指定方式）
+アドレス部の値と基底レジスタの値の和を、実効アドレスとする。
+
+・相対アドレス指定方式
+アドレス部の値と命令アドレスレジスタ（プログラムカウンタ）の値の和を、実効アドレスとする。
+```
+
+```
+【性能指標】
+クロック周波数・・・１秒の振動数「Hz」。高いほど処理速度が早い。
+CPI・・・ある命令が何クロックサイクルが必要かを表した値。
+MPIS・・・１秒で実行できる命令の数。命令ミックスを使って求める。
+FROPS・・・１秒で実行できる浮動小数点計算の数。
+
+命令ミックス・・・よく使う命令を、頻度で重みづけして混ぜたもの。
+
+【設計思想】
+CISC・・・なるべく少ない行数の命令でタスクを実行することを目的とした、複雑な命令を実行することを基本とするアーキテクチャ。
+　　　　　　　　　　　　　例） intel系CPU
+RISC・・・単純な命令を実行することを基本としたアーキテクチャ。
+　　　　　　　　　　　　　例） ARM系CPU
 
 ```
 
