--- a/基本情報技術者試験.md
+++ b/基本情報技術者試験.md
@@ -258,8 +258,12 @@ FROPS・・・１秒で実行できる浮動小数点計算の数。
 CISC・・・なるべく少ない行数の命令でタスクを実行することを目的とした、複雑な命令を実行することを基本とするアーキテクチャ。
 　　　　　　　　　　　　　例） intel系CPU
 RISC・・・単純な命令を実行することを基本としたアーキテクチャ。
-　　　　　　　　　　　　　例） ARM系CPU
+　　　　　　　　　　　　　例） ARM系CPU（組み込みシステムやモバイル端末）
 
+【高速化技術】
+パイプライン処理・・・少しずつずらして処理を行うことで空いた資源を有効に活用し、高速化を図る。処理の分割数を 深さ という。
+スーパースカラ・・・複数の処理系でパイプライン処理を行うこと。
+スーパーパイプライン・・・パイプライン処理の深さがより深いもの。
 ```
 
 # ソフトウェア
