--- a/基本情報技術者試験.md
+++ b/基本情報技術者試験.md
@@ -247,12 +247,14 @@ CPUの仕組み
 
 ```
 【性能指標】
+クロック(信号)・・・すべての装置でタイミングをそろえるための電気信号。
 クロック周波数・・・１秒の振動数「Hz」。高いほど処理速度が早い。
 CPI・・・ある命令が何クロックサイクルが必要かを表した値。
 MPIS・・・１秒で実行できる命令の数。命令ミックスを使って求める。
 FROPS・・・１秒で実行できる浮動小数点計算の数。
 
 命令ミックス・・・よく使う命令を、頻度で重みづけして混ぜたもの。
+　　　　　　　　　　　　　　　　　　　　　　　実行速度　×　出現頻度　を　加算して求める。
 
 【設計思想】
 CISC・・・なるべく少ない行数の命令でタスクを実行することを目的とした、複雑な命令を実行することを基本とするアーキテクチャ。
