--- a/基本情報技術者試験.md
+++ b/基本情報技術者試験.md
@@ -291,6 +291,17 @@ RAMの分類
 →　キャッシュメモリアクセス時間　×　ヒット率　＋　主記憶アクセス時間　×　（１　-　ヒット率）
 
 メモリインタリーブ・・・メモリを複数の区画（バンク）に分割し、アクセスの高速化を図る方法。
+```
+
+## ハードディスク
+```
+補助記憶装置のこと。容量が大きいが遅い。
+
+補助記憶装置の分類
+・SSD・・・アクセス速度が早い。
+
+・HDD・・・磁気ディスク装置。アクセス速度とデータ転送が比較的高速。大容量。
+
 
 ```
 
